@@ -2,7 +2,6 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -24,8 +23,8 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("no columns")
     public void testInputBoardWithOneRowAndNoColumns() {
-        List<String> inputBoard = Collections.singletonList("");
-        List<String> expectedNumberedBoard = Collections.singletonList("");
+        List<String> inputBoard = List.of("");
+        List<String> expectedNumberedBoard = List.of("");
         List<String> actualNumberedBoard = new FlowerFieldBoard(inputBoard).withNumbers();
 
         assertThat(actualNumberedBoard).isEqualTo(expectedNumberedBoard);
@@ -35,13 +34,13 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("no flowers")
     public void testInputBoardWithNoFlowers() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "   ",
                 "   ",
                 "   "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "   ",
                 "   ",
                 "   "
@@ -56,13 +55,13 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("garden full of flowers")
     public void testInputBoardWithOnlyFlowers() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "***",
                 "***",
                 "***"
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "***",
                 "***",
                 "***"
@@ -77,13 +76,13 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("flower surrounded by spaces")
     public void testInputBoardWithSingleFlowerAtCenter() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "   ",
                 " * ",
                 "   "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "111",
                 "1*1",
                 "111"
@@ -98,13 +97,13 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("space surrounded by flowers")
     public void testInputBoardWithFlowersAroundPerimeter() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "***",
                 "* *",
                 "***"
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "***",
                 "*8*",
                 "***"
@@ -119,11 +118,11 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("horizontal line")
     public void testInputBoardWithSingleRowAndTwoFlowers() {
-        List<String> inputBoard = Collections.singletonList(
+        List<String> inputBoard = List.of(
                 " * * "
         );
 
-        List<String> expectedNumberedBoard = Collections.singletonList(
+        List<String> expectedNumberedBoard = List.of(
                 "1*2*1"
         );
 
@@ -136,11 +135,11 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("horizontal line, flowers at edges")
     public void testInputBoardWithSingleRowAndTwoFlowersAtEdges() {
-        List<String> inputBoard = Collections.singletonList(
+        List<String> inputBoard = List.of(
                 "*   *"
         );
 
-        List<String> expectedNumberedBoard = Collections.singletonList(
+        List<String> expectedNumberedBoard = List.of(
                 "*1 1*"
         );
 
@@ -153,7 +152,7 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("vertical line")
     public void testInputBoardWithSingleColumnAndTwoFlowers() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 " ",
                 "*",
                 " ",
@@ -161,7 +160,7 @@ public class FlowerFieldBoardTest {
                 " "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "1",
                 "*",
                 "2",
@@ -178,7 +177,7 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("vertical line, flowers at edges")
     public void testInputBoardWithSingleColumnAndTwoFlowersAtEdges() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "*",
                 " ",
                 " ",
@@ -186,7 +185,7 @@ public class FlowerFieldBoardTest {
                 "*"
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "*",
                 "1",
                 " ",
@@ -203,7 +202,7 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("cross")
     public void testInputBoardWithFlowersInCross() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "  *  ",
                 "  *  ",
                 "*****",
@@ -211,7 +210,7 @@ public class FlowerFieldBoardTest {
                 "  *  "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 " 2*2 ",
                 "25*52",
                 "*****",
@@ -228,7 +227,7 @@ public class FlowerFieldBoardTest {
     @Test
     @DisplayName("large garden")
     public void testLargeInputBoard() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 " *  * ",
                 "  *   ",
                 "    * ",
@@ -237,7 +236,7 @@ public class FlowerFieldBoardTest {
                 "      "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "1*22*1",
                 "12*322",
                 " 123*2",
@@ -251,4 +250,20 @@ public class FlowerFieldBoardTest {
         assertThat(actualNumberedBoard).isEqualTo(expectedNumberedBoard);
     }
 
+    @Disabled("Remove to run test")
+    @Test
+    @DisplayName("multiple adjacent flowers")
+    public void testMultipleAdjacentFlowers() {
+        List<String> inputBoard = List.of(
+                " ** "
+        );
+
+        List<String> expectedNumberedBoard = List.of(
+                "1**1"
+        );
+
+        List<String> actualNumberedBoard = new FlowerFieldBoard(inputBoard).withNumbers();
+
+        assertThat(actualNumberedBoard).isEqualTo(expectedNumberedBoard);
+    }
 }
